--- a/ruoyi-ui-vue3/src/components/ProTable/index.module.scss
+++ b/ruoyi-ui-vue3/src/components/ProTable/index.module.scss
@@ -173,6 +173,7 @@
       position: absolute;
       .table-empty {
         line-height: 30px;
+        padding: 30px;
         img {
           display: inline-flex;
         }
